# humanoid_lite

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: policy_humanoid_lite.yaml  policy_latest.yaml
scripts/rsl_rl/: cli_args.py  play.py  train.py
scripts/sim2sim/: play_mujoco.py
source/humanoid_lite/: pyproject.toml
source/humanoid_lite/humanoid_lite/environments/: mujoco.py
source/humanoid_lite/humanoid_lite/tasks/locomotion/velocity/: __init__.py  velocity_env_cfg.py
source/humanoid_lite/humanoid_lite/tasks/locomotion/velocity/config/: __init__.py
source/humanoid_lite/humanoid_lite/tasks/locomotion/velocity/config/humanoid/: __init__.py  env_cfg.py
source/humanoid_lite/humanoid_lite/tasks/locomotion/velocity/config/humanoid/agents/: rsl_rl_ppo_cfg.py
source/humanoid_lite/humanoid_lite/tasks/locomotion/velocity/mdp/: __init__.py  curriculums.py  events.py  rewards.py  terminations.py
source/humanoid_lite_assets/: pyproject.toml
source/humanoid_lite_assets/data/mjcf/: hl_scene.xml  humanoid_lite.xml
source/humanoid_lite_assets/humanoid_lite_assets/robots/: __init__.py  humanoid_lite.py
source/humanoid_lite_lowlevel/: pyproject.toml  requirements.txt
source/humanoid_lite_lowlevel/humanoid_lite_lowlevel/policy/: config.py  gamepad.py  rl_controller.py
