[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "humanoid_lite"
version = "2025.07.30"
description = "Training environment for Humanoid Lite"
authors = [
    { name = "Yash KVR" }
]
maintainers = [
    { name = "Yash KVR" },
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["robotics", "isaaclab"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Isaac Sim :: 4.5.0",
]
dependencies = [
    "psutil",
]

[tool.setuptools]
packages = ["humanoid_lite"]
zip-safe = false 